[project]
name = "rltree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "libspec",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "radon>=6.0.0",
    "coverage>=7.0.0",
    "mutmut>=2.4.0",
    "pytest>=7.0.0",
    "torch",
    "numpy",
]

[tool.uv.sources]
libspec = { path = "../libspec", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL"]
ignore = ["E501", "N812", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
exclude = [".venv", "build"]

[tool.coverage.run]
source = ["rltree"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
